# xr-single-cell

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
xr_single_cell/: __init__.py  _version.py  accessor.py
xr_single_cell/tests/: test_sc_accessor.py
