[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.pytest.ini_options]
testpaths = ["xr_single_cell/tests"]
addopts = [
    "--ignore-glob=docs/examples/*.py",
]

[tool.mypy]
files = "xr_single_cell"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
implicit_reexport = false
disallow_untyped_defs = true
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
