[metadata]
name = xr_single_cell
description = Xarray Accessor for quantifying cellular ROIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrussell25/xr-single-cell
author = John Russell
author_email = johncrussell25@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/jrussell25/xr-single-cell
[options]
packages = find:
install_requires =
    xarray
    scikit-image
python_requires = >=3.10
zip_safe = False

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest
    ruff
testing =
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
